# cortex

./: .gitignore  Makefile  README.md  build_dashboard.py  build_kg_dashboard.py  config.toml.example  docker-compose.yml  make_postgres_demo.py  superset_config.py
agent/: Cargo.toml  build.rs
agent/src/: app_metadata.rs  browser_info.rs  capture.rs  config.rs  db.rs  extract.rs  main.rs  ocr.rs  window_info.rs
agent/src-objc/: app_metadata.h  app_metadata.m  browser_info.h  browser_info.m  ocr_wrapper.h  ocr_wrapper.m  window_info.h  window_info.m
database/: init.sql  migrate_001_kg.sql
