[package]
name = "screenpipe-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "screenpipe-agent"
path = "src/main.rs"

[dependencies]
xcap = "0.8.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"

[build-dependencies]
cc = "1"
