[package]
name = "cortex-agent"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cortex-agent"
path = "src/main.rs"

[[bin]]
name = "cortex-query"
path = "src/bin/query.rs"

[[bin]]
name = "cortex-web"
path = "src/bin/web.rs"

[dependencies]
xcap = "0.8.2"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "json"] }
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
serde_json = "1"
reqwest    = { version = "0.12", features = ["json"] }
rand       = "0.8"
axum       = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

[build-dependencies]
cc = "1"
